syntax = "proto3";

option go_package = "grpc-user/pb/user";

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message GetUserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
}

message DeleteUserRequest {
    string id = 1;
}

message CreateUserResponse {
    bool status = 1;
    string message = 2;
    string id = 3;
    string name = 4;
    string email = 5;
}

message GetUserResponse {
    bool status = 1;
    string message = 2;
    string id = 3;
    string name = 4;
    string email = 5;
}

message UpdateUserResponse {
    bool status = 1;
    string message = 2;
    string id = 3;
    string name = 4;
    string email = 5;
}

message DeleteUserResponse {
    bool status = 1;
    string message = 2;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
